# FullStack-AI-22

./: .gitignore  README.md  pyproject.toml
data-managment-demo/: data_managment.ipynb
docker-demo/backend/: .gitignore  Dockerfile  cmd  docker-compose.yaml  docker-purge.sh  pyproject.toml  requirements.txt
docker-demo/backend/app/: main.py  test.py
docker-demo/backend/app/crud/: __init__.py  crud_base.py  image_record.py  label.py
docker-demo/backend/app/db/: __init__.py  orm_base.py  session.py
docker-demo/backend/app/models/: __init__.py  image_record.py  label.py
docker-demo/backend/app/routers/: image_record.py  label.py
docker-demo/backend/app/schemas/: __init__.py  image_record.py  label.py
docker-demo/backend/app/utils/: __init__.py  gcp_utils.py  image_utils.py
docker-demo/backend/data/db/: postmaster.pid
docker-demo/backend/data/db/base/1/: 1259  2619  2619_vm  2696
docker-demo/backend/data/db/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  17285  17286  17291  17292  17294  17652  17658  17659  17661  17662  17668  17669  17671  2224  2224_vm  2579  2604  2604_fsm  2604_vm  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  (+25 more)
docker-demo/backend/data/db/base/17296/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13370  13370_fsm  13370_vm  13374  13375  13375_fsm  13375_vm  13379  13380  13380_fsm  13380_vm  13384  13385  13385_fsm  13385_vm  13389  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+206 more)
docker-demo/backend/data/db/base/5/: pg_internal.init
docker-demo/backend/data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
docker-demo/backend/data/db/pg_stat/: pgstat.stat
docker-demo/backend/data/db/pg_xact/: 0000
docker-demo/frontend-streamlit/: .dockerignore  .gitignore  Dockerfile  home.py  pyproject.toml
docker-demo/frontend-streamlit/app/services/: __init__.py  image_record_service.py  labels_service.py
docker-demo/frontend-streamlit/pages/: labels.py
fast-api-demo/: api.py  (+5 more)
project-demo/frontend/: .dockerignore  Dockerfile  Dockerfile.prod  home.py  pyproject.toml
project-demo/frontend/pages/: about.py
streamlit_demo/: hello.py  pyproject.toml
streamlit_demo/pages/: about.py  home.py
(+58 files in other folders)
