[tool.poetry]
name = "fullstack-ai"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz"]
readme = "README.md"
packages = [{include = "fullstack_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
